# dotfiles-old

./: .stowrc  README.org  stow_aux.sh
appconfig/.shrc.d/: appconfig
base/: .gitconfig  .mostrc  .tmux.conf
base/.config/: topgrade.toml
base/.gnupg/: gpg-agent.conf  gpg.conf
base/.shrc.d/: base
base/.ssh/: config
bash/: .bash_profile  .bashrc  .profile
elinks/.elinks/: elinks.conf
elinks/.profile.d/: elinks
emacs/: TODO.org
emacs/.emacs.d/: _init.el  init.el
emacs/.profile.d/: emacs
emacs/.shrc.d/: emacs
git/: .gitconfig
mpd/: .mpdconf
redshift/.config/: redshift.conf
ssh/.ssh/: config
tmux/: .tmux.conf
tmux/.profile.d/: 000_tmux  zzz_tmux
tmux/.xprofile.d/: tmux
xconfig/: .XCompose  .Xresources  .Xsession  .imwheelrc  .xinitrc  .xprofile  .xscreensaver
xconfig/.Xresources.d/: xscreensaver
xconfig/.config/: redshift.conf
xconfig/.profile.d/: xdg
xconfig/.shrc.d/: xconfig
xconfig/.xprofile.d/: 10_xsetup.sh  11_monitors.sh  monitors.sh  xsetup.sh
xmonad/: .stalonetrayrc  .xmobarrc
xmonad/.xmonad/: build  genhelp.awk  nhalbleiter-xmonad.cabal  xmonad.hs
xmonad/.xmonad/dmenu/: games.txt  mpc_commands.txt  preselection.txt  sysctl_units.txt
xmonad/.xmonad/lib/: CommandPrefix.hs  MyBars.hs  MyColors.hs  MyVisuals.hs
xmonad/.xmonad/lib/XMobar/: Config.hs
xmonad/.xmonad/lib/XMobar/Config/: Types.hs
xmonad/.xmonad/lib/XMonad/Actions/: LoggedAction.hs  MPD.hs
xmonad/.xmonad/lib/XMonad/Prompt/: AssociationPrompt.hs  ListCompletedPrompt.hs  UdiskiePrompt.hs
xmonad/.xmonad/lib/XMonad/Util/: RunExt.hs
(+39 files in other folders)
